[gd_scene load_steps=4 format=3 uid="uid://bhig10jtl88pt"]

[ext_resource type="Script" path="res://scripts/pantalla_creditos.gd" id="1_1pjd3"]
[ext_resource type="FontFile" uid="uid://bfdlmvbyp8yqh" path="res://fonts/EquipmentPro.otf" id="1_eme6i"]
[ext_resource type="AudioStream" uid="uid://ct0m1o42y5ggh" path="res://sonidos/musicas/MusicaPantallaDeCarga.ogg" id="3_ref3a"]

[node name="PantallaCreditos" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1199.0
offset_bottom = 134.0
script = ExtResource("1_1pjd3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 512.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 1198.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("1_eme6i")
theme_override_font_sizes/font_size = 128
text = "MENCIONES HONORÍFICAS"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = -2.0
offset_top = 118.0
offset_right = 1198.0
offset_bottom = 182.0
theme_override_fonts/font = ExtResource("1_eme6i")
theme_override_font_sizes/font_size = 64
text = "Creación de diseños: Ishtar"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label3" type="Label" parent="."]
visible = false
offset_left = -2.0
offset_top = 173.0
offset_right = 1198.0
offset_bottom = 237.0
theme_override_fonts/font = ExtResource("1_eme6i")
theme_override_font_sizes/font_size = 64
text = "Testeo e ideas: Proxing, Yago, Gorka"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label4" type="Label" parent="."]
visible = false
offset_left = -2.0
offset_top = 228.0
offset_right = 1198.0
offset_bottom = 292.0
theme_override_fonts/font = ExtResource("1_eme6i")
theme_override_font_sizes/font_size = 64
text = "Testeo general: Todos los del discord"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label5" type="Label" parent="."]
visible = false
offset_left = 2.0
offset_top = 339.0
offset_right = 1200.0
offset_bottom = 467.0
theme_override_fonts/font = ExtResource("1_eme6i")
theme_override_font_sizes/font_size = 128
text = "GRACIAS POR JUGAR"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ref3a")
